backend/frontend: rename address.street -> address.street_address
 - it's a better name and aligned with the filter
